# Autodidact

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  vitest.config.ts
.github/workflows/: release.yml
autodidact/: __init__.py  agent.py  cli.py  database.py  document_store.py  hardware.py  llm_client.py  setup_wizard.py  thought_renderer.py
autodidact/signals/: grounded_self_assessment.py
demo-prototype/: package-lock.json  package.json  tsconfig.json
demo-prototype/demo/: run-demo.ts
demo-prototype/src/: agent.ts  bedrock-router.ts  cloud-router.ts  confidence-evaluator.ts  database.ts  index.ts  knowledge-store.ts  learning-extractor.ts  llm-client.ts  schemas.ts  skill-store.ts  types.ts
pitch/: Autodidact-VietnamAIStars2026.pptx  DEMO-SCRIPT.md  PITCH-DECK-OUTLINE.md  PITCH-VIDEO-SCRIPT.md  SLIDE-BY-SLIDE-GUIDE.md  gen.mjs  generate-pptx.mjs  slides.html
prototype/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
prototype/src/: cli.ts  config.ts  database.ts  demo-bedrock.ts  demo-real.ts  index.ts  schemas.ts
src/: config.ts  database.ts  demo.ts  index.ts  schemas.ts  types.ts
src/components/: confidence-evaluator.ts  context-builder.ts  (+1 more)
tests/: conftest.py  test_agent.py  test_bedrock_discovery.py  test_chat_slash_cloud.py  test_chat_slash_gsa.py  test_chat_slash_learn.py  test_chunk_token_aware.py  test_cli.py  test_conftest_safety.py  test_cost_tracking.py  test_document_store.py  test_extract_answer.py  test_gsa_error_scoping.py  test_gsa_no_think.py  test_gsa_prompts.py  test_gsa_routing_gate.py  test_hardware_detect.py  test_init_sanity_checks.py  test_init_wizard_integration.py  test_ollama_install_flow.py  test_openrouter_discovery.py  test_progress_callbacks.py  test_pypi_release.py  test_pyproject.py  test_refusal_detector.py  test_retry_policy.py  test_setup_wizard.py  test_streaming.py  test_streaming_agent.py  test_streaming_cloud.py  test_thought_renderer.py  test_wizard_list_pickers.py  test_wizard_model_verification.py
(+19 files in other folders)
