[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodidact"
version = "1.0.7"
description = "Self-learning AI agent that gets smarter over time. Routes between local and cloud models by confidence; learns from every escalation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "ai",
    "agent",
    "self-learning",
    "local-first",
    "ollama",
    "llm",
    "routing",
    "rag",
    "confidence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "pydantic>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "tokenizers>=0.20",
    "questionary>=2.0",
    "psutil>=5.9",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/BuffaloTechRider/Autodidact"
Repository = "https://github.com/BuffaloTechRider/Autodidact"
Issues = "https://github.com/BuffaloTechRider/Autodidact/issues"

[project.optional-dependencies]
bedrock = [
    "boto3>=1.28",
]
pdf = [
    "pymupdf>=1.23",
]
code = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
autodidact = "autodidact.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["autodidact*"]
